# check

./: .gitignore  CMakeLists.txt
src/: .kdev_include_paths  CMakeLists.txt
src/game/: board.cpp  board.hpp  game_control.cpp  game_control.hpp  move.cpp  move.hpp  util.hpp
src/gui/: main_window.cpp  main_window.hpp  settings_dialog.hpp
src/gui_base/: clickable_image.cpp
src/main/: check.cpp
